# haybale-pitchfork

./: .gitignore  Cargo.toml  README.md  aliases.js  index.html  refresh-docs.sh  search-index.js  settings.html  source-files.js
haybale_pitchfork/: all.html  enum.AbstractValue.html  enum.CompleteAbstractData.html  enum.ConstantTimeResultForPath.html  fn.check_for_ct_violation.html  fn.check_for_ct_violation_in_inputs.html  fn.is_constant_time.html  fn.is_constant_time_in_inputs.html  fn.main_func.html  index.html  sidebar-items.js  struct.AbstractData.html  struct.Config.html  struct.ConstantTimeResultForFunction.html  struct.PathStatistics.html  struct.PitchforkConfig.html  struct.Project.html  type.StructDescriptions.html
haybale_pitchfork/abstractdata/: enum.AbstractValue.html  enum.CompleteAbstractData.html  struct.AbstractData.html  type.StructDescriptions.html
haybale_pitchfork/allocation/: fn.allocate_args.html  index.html  sidebar-items.js  struct.Context.html  struct.InitializationContext.html
haybale_pitchfork/hook_helpers/: fn.allocate_and_init_abstractdata.html  fn.fill_secret_with_length.html  fn.fill_unconstrained_with_length.html  fn.reinitialize_pointee.html  index.html  sidebar-items.js
haybale_pitchfork/hooks/: fn.propagate_taint.html  fn.return_public_unconstrained.html  fn.return_secret.html  index.html  sidebar-items.js
haybale_pitchfork/main_func/: fn.main_func.html
haybale_pitchfork/secret/: enum.BV.html  index.html  sidebar-items.js  struct.Backend.html  struct.BtorRef.html  struct.Memory.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.AsRef.js  trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js
implementors/haybale/backend/: trait.BV.js  trait.Backend.js  trait.Memory.js  trait.SolverRef.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
main/: index.html
src/: abstractdata.rs  allocation.rs  coverage.rs  default_hook.rs  hook_helpers.rs  hooks.rs  lib.rs  logging.rs  main_func.rs  path_statistics.rs  pitchfork_config.rs  progress.rs  secret.rs
src/haybale_pitchfork/: abstractdata.rs.html  allocation.rs.html  coverage.rs.html  default_hook.rs.html  hook_helpers.rs.html  hooks.rs.html  lib.rs.html  logging.rs.html  main_func.rs.html  progress.rs.html  secret.rs.html
src/main/: main.rs.html
tests/: ct.rs  ct_haybale.rs
tests/bcfiles/: Makefile  ct.bc  ct.c  ct.ll
tests/bcfiles/haybale/: README.md
