[package]
name = "haybale-pitchfork"
version = "0.1.0"
authors = ["Craig Disselkoen <craigdissel@gmail.com>"]
edition = "2018"
description = "Verifying constant-time code with symbolic execution"
documentation = "https://PLSysSec.github.io/haybale-pitchfork"
repository = "https://github.com/PLSysSec/haybale-pitchfork"
readme = "README.md"
keywords = ["constant-time", "symbolic", "llvm", "SMT"]
license = "MIT"

[dependencies]
boolector = "0.3.0"
haybale = "0.4.0"
llvm-ir = "0.5.3"
log = "0.4.8"
lazy_static = "1.4"
colored = "1.9"
itertools = "0.9.0"
either = "1.5.3"
chrono = "0.4"
env_logger = "0.7.1"
log4rs = { version = "0.10.0", optional = true, default-features = false, features = ["file_appender", "simple_writer", "pattern_encoder", "threshold_filter"] }
crossterm = { version = "0.16.0", optional = true }

[features]
default = ["progress-updates"]

# This feature enables the `progress_updates` option in `PitchforkConfig`.
# For more details, see the documentation of that option.
progress-updates = ["log4rs", "crossterm"]
