[package]
name = "haybale-pitchfork"
version = "0.3.1"
authors = ["Craig Disselkoen <craigdissel@gmail.com>"]
edition = "2018"
description = "Verifying constant-time code with symbolic execution"
documentation = "https://docs.rs/haybale-pitchfork"
repository = "https://github.com/PLSysSec/haybale-pitchfork"
readme = "README.md"
keywords = ["constant-time", "symbolic", "llvm", "SMT"]
license = "MIT"

[dependencies]
boolector = "0.4.1"
haybale = "0.6.3"
llvm-ir = "0.7.4"
log = "0.4.8"
lazy_static = "1.4"
colored = "1.9"
itertools = "0.9.0"
either = "1.5.3"
chrono = "0.4"
env_logger = "0.7.1"
log4rs = { version = "0.10.0", optional = true, default-features = false, features = ["file_appender", "simple_writer", "pattern_encoder", "threshold_filter"] }
crossterm = { version = "0.16.0", optional = true }

[features]
default = ["progress-updates"]

# Select the LLVM version to be compatible with.
# You _must_ enable exactly one of the following features.
llvm-9 = ["haybale/llvm-9", "llvm-ir/llvm-9"]
llvm-10 = ["haybale/llvm-10", "llvm-ir/llvm-10"]
llvm-11 = ["haybale/llvm-11", "llvm-ir/llvm-11"]

# These features select the corresponding LLVM version, and require an exact
# match between the system LLVM version and the LLVM version chosen here. For
# more information, see the "strict-versioning" feature on `llvm-sys`.
llvm-9-strict = ["llvm-9", "haybale/llvm-9-strict", "llvm-ir/llvm-9-strict"]
llvm-10-strict = ["llvm-10", "haybale/llvm-10-strict", "llvm-ir/llvm-10-strict"]
llvm-11-strict = ["llvm-11", "haybale/llvm-11-strict", "llvm-ir/llvm-11-strict"]

# This feature enables the `progress_updates` option in `PitchforkConfig`.
# For more details, see the documentation of that option.
progress-updates = ["log4rs", "crossterm"]

[package.metadata.docs.rs]
# Generate docs.rs documentation with the llvm-10 feature
features = ["llvm-10"]
